Fixes for tinymce issues on mobile/tablet.

--- a/themes/SuiteR/css/style.css
+++ b/themes/SuiteR/css/style.css
@@ -4425,6 +4425,38 @@ h3 span{
     overflow:hidden;
 }
 
+table.mceLayout, textarea.tinyMCE {
+    width: 100% !important;
+}
+
+/* make the toolbar wrap */
+.mceToolbar td {
+    display:table-row;
+    float: left;
+}
+.mceToolbar td:nth-of-type(11){
+    clear: left;
+}
+
+@media only screen and (max-width: 959px) {
+    table.mceLayout, textarea.richEditor, {
+        width: 90% !important;
+        overflow:scroll;
+    }
+
+    /* remove the toolbar wrap */
+    .mceToolbar td {
+        display:table-cell;
+        float: none;
+    }
+    .mceToolbar td:nth-of-type(11){
+        clear: none;
+    }
+    .defaultSkin .mceToolbar{
+        height:auto !important;
+    }
+}
+
 
 
 /* End SuiteCRM Responsive/Bootstrap additional CSS */
